--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ header {
     flex-direction:row;
     justify-content:center;
     margin-bottom: 50px;
+    font-weight: bold;
 }
 
 .player {
@@ -83,8 +84,73 @@ button {
     border-radius: 12px;
     border: none;
     margin-bottom: 52px;
+    transition: all 0.28s ease;
+}
+
+button:hover {
+    cursor:pointer;
+    background-color: #111720;
 }
 
 footer {
     font-size: 18px
+}
+
+
+/* MODAYS */
+
+.modal {
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid #222831;
+    display: flex;
+    flex-direction:column;
+    background-color: #222831;
+    border-radius: 10px;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    width: 300px;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.finalWinner {
+    color: white;
+    font-size: 42px;
+    font-weight:700;
+    margin:10px 20px;
+}
+
+.playAgain {
+    color: white;
+    font-size: 34px;
+    font-weight:100;
+    height: 60px ;
+    width: 200px;
+    margin:10px 20px;
+
+}
+
+#overlay {
+    position:fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: rgba(0,0,0,0.7);
+    pointer-events:none;
+}
+
+#overlay.active {
+    opacity: 1;
+    pointer-events:all;
 }
